# tinylisp

./: CMakeLists.txt  README.md
src/: builtins.c  builtins.h  error.c  error.h  eval.c  eval.h  main.c  object.c  object.h  parse.c  parse.h  stack.c  stack.h  tinylisp.c  tinylisp.h
tests/: multiply.tl  simple.out  simple.tl
